<resources>
    <string name="app_name">Harmonica Practice Assistant</string>
    <string name="load_song">Load Song</string>
    <string name="new_song">New Song</string>
    <string name="song_name">Song Name</string>
    <string name="tabs">Tabs</string>
    <string name="name_in_use">Name already in use</string>
    <string name="name_in_use_dialog">If you continue your song will be discarded, change its name?</string>
    <string name="rename">Rename</string>
    <string name="discard">Discard</string>
    <string name="delete_message">Delete song?</string>
    <string name="delete_message_dialog">Are you sure you want to delete this song?</string>
    <string name="delete_all_message_dialog">Are you sure you want to delete all songs? (This cannot be undone)</string>
    <string name="delete_selected_message_dialog">Are you sure you want to delete all selected songs? (This cannot be undone)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="increase_text_size">&gt;</string>
    <string name="decrease_text_size">&lt;</string>
    <string name="text_size_text">Change default text size</string>
    <string name="import_songs">Import songs</string>
    <string name="import_songs_fail">Can\'t import songs due to lack of permission</string>
    <string name="export_songs">Export songs</string>
    <string name="save_settings">Save Settings</string>
    <string name="save_song">Save Song</string>
    <string name="ok">OK</string>
    <string name="bad_file">The file is wrong</string>
    <string name="keyboard">Slim Keyboard</string>
    <string name="key">Keys</string>
    <string name="bracket_open">[</string>
    <string name="bracket_close">]</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="step_and_a_half_bend">\"\'</string>
    <string name="whole_step_bend">\"</string>
    <string name="half_step_bend">\'</string>
    <string name="wave">~</string>
    <string name="over">o</string>
    <string name="song_text">Song Text</string>
    <string name="notes">Notes</string>
    <string name="recording_permission_denied">Recording permission was denied</string>
    <string name="not_applicable">N/A</string>
    <string name="frequency">Frequency</string>
    <string name="holes">Holes</string>
    <string name="clear">Clear</string>
    <string name="pitch_detector">Pitch Detector</string>
    <string name="recording_button_desc">recording button</string>
    <string name="save">Save</string>
    <string name="rename_title">Rename song</string>
    <string name="warning">Warning</string>
    <string name="illegal_tabs_warning">There are illegal tabs in the song, do you still wish to save?</string>
    <string name="settings_activity_back_press_dialog">Do you wish to save or discard the settings?</string>
    <string name="save_settings_fail">Failed to save settings</string>
    <string name="song_editor_dialog_back_press">You have unsaved changes, do you wish to save them?</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="select">Select</string>
    <string name="song_list">Song List</string>
    <string name="select_all">Select All</string>
    <string name="delete_all_title">Delete All Songs?</string>
    <string name="delete_selected_title">Delete Selected Songs?</string>
    <string name="test">test</string>
    <string name="stop_selection">Stop Selection</string>
    <string name="test_x10">test x10</string>
    <string name="favourite_selected">Favourite Selected</string>
    <string name="unfavourite_selected">Unfavourite Selected</string>
    <string name="favourite">Favourite</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="unselect">Unselect</string>
    <string name="unselect_all">Unselect All</string>
    <string name="key_spinner">Key Spinner</string>
</resources>
