<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:clickable="false"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <Button
        android:id="@+id/import_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:onClick="importSongs"
        android:text="@string/import_songs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal2" />

    <Button
        android:id="@+id/export_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:onClick="exportSongs"
        android:text="@string/export_songs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/import_songs" />

    <TextView
        android:id="@+id/keyboard_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:onClick="exportSongs"
        android:text="@string/keyboard"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/slim"
        app:layout_constraintStart_toStartOf="@id/export_songs"
        app:layout_constraintTop_toBottomOf="@+id/export_songs" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/slim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@id/keyboard_type"
        app:layout_constraintEnd_toEndOf="@id/export_songs"
        app:layout_constraintStart_toEndOf="@id/keyboard_type"
        app:layout_constraintTop_toTopOf="@id/keyboard_type" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:clickable="false"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/text_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/text_size_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_size_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyboard_type" />

    <EditText
        android:id="@+id/text_size_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textColor="@color/colorAccent"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/increase_text_size"
        app:layout_constraintStart_toEndOf="@+id/decrease_text_size"
        app:layout_constraintTop_toTopOf="@+id/decrease_text_size" />

    <Button
        android:id="@+id/decrease_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="decrease"
        android:text="@string/decrease_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/export_songs" />

    <Button
        android:id="@+id/increase_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="increase"
        android:text="@string/increase_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintStart_toEndOf="@+id/export_songs" />


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:onClick="save"
        android:text="@string/save_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
</androidx.constraintlayout.widget.ConstraintLayout>