<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/text_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/text_size_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_size_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    todo does this have to be an edit text, why not a textview-->
    <EditText
        android:id="@+id/text_size_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:enabled="false"
        android:textColor="@color/colorAccent"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/increase_text_size"
        app:layout_constraintStart_toEndOf="@+id/decrease_text_size"
        app:layout_constraintTop_toTopOf="@+id/decrease_text_size" />

    <Button
        android:id="@+id/decrease_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="decrease"
        android:text="@string/decrease_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/increase_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="increase"
        android:text="@string/increase_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>