<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/load_button"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="loadSongs"
        android:padding="20sp"
        android:text="@string/load_song"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/new_button"
        app:layout_constraintEnd_toEndOf="@+id/pitch_detection_button"
        app:layout_constraintStart_toStartOf="@+id/pitch_detection_button" />

    <Button
        android:id="@+id/new_button"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:onClick="newSong"
        android:padding="20sp"
        android:text="@string/new_song"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/pitch_detection_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pitch_detection_button" />

    <Button
        android:id="@+id/pitch_detection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="pitchDetector"
        android:padding="20sp"
        android:text="@string/pitch_detector"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:clickable="false"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40sp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

</androidx.constraintlayout.widget.ConstraintLayout>