<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/popup_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/action_buttons_2"
    app:layout_constraintLeft_toLeftOf="@+id/action_buttons_2"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <!--    app:layout_constraintRight_toRightOf="parent"-->
    <!--    app:layout_constraintTop_toTopOf="parent"-->
    <FrameLayout
        android:id="@+id/step_and_a_half_bend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            app:tint="@null"
            tools:ignore="ContentDescription"
            android:layout_height="wrap_content"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="16dp"
            android:text="@string/step_and_a_half_bend"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/whole_bend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:tint="@null"
            tools:ignore="ContentDescription"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="16dp"
            android:text="@string/whole_step_bend"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/half_bend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:tint="@null"
            tools:ignore="ContentDescription"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="16dp"
            android:text="@string/half_step_bend"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </FrameLayout>
</LinearLayout>