<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pitchdetector.PitchDetectorOld">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:clickable="false"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_applicable"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_applicable"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/hertz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hertz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_applicable"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/record_pitch_detector"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/round_button"
        android:onClick="recordNotes"
        android:padding="5sp"
        android:scaleType="centerInside"
        android:src="@drawable/microphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_list_pitch_detector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bottom_line"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="200sp"
        android:paddingEnd="200sp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_pitch_detector" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal3"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:clickable="false"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <Button
        android:id="@+id/visual_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:onClick="switchVisual"
        android:text="@string/frequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal3" />

    <Spinner
        android:id="@+id/key_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:prompt="@string/key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal3" />
    <!--todo add save to song button-->
</androidx.constraintlayout.widget.ConstraintLayout>